--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.android.worldcarquiz.MainActivity"
+            android:name="com.android.worldcarquiz.activity.MainMenuActivity"
             android:label="@string/app_name" 
             android:theme="@android:style/Theme.Light.NoTitleBar">
             <intent-filter>
@@ -22,6 +22,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity 
+            android:name="com.android.worldcarquiz.activity.WorldsListActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar">      
         </activity>
     </application>
 
