--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,4 @@ pip-log.txt
 gen/com/android/worldcarquiz/BuildConfig.java
 gen/com/android/worldcarquiz/R.java
 gen/com/android/worldcarquiz/BuildConfig.java
+gen/com/android/worldcarquiz/R.java
