--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,11 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Light.NoTitleBar">      
         </activity>
+        <activity 
+            android:name="com.android.worldcarquiz.activity.QuestionActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light">      
+        </activity>        
     </application>
 
 </manifest>
