Cambios a fuego (ver descripcion)
-Añadidas clases Subworld para los niveles de dificultad de cada mundo.
-Añadido código de prueba, borrar en futuro próximo.
-Añadidos layouts y contenedores para la visa del submundo
-Modificaciones del manifest

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,11 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Light">      
         </activity>        
+        <activity 
+            android:name="com.android.worldcarquiz.activity.WorldPagerActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light">      
+        </activity>          
     </application>
 
 </manifest>
