--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,8 +15,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.android.worldcarquiz.activity.MainMenuActivity"
-            android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,18 +24,15 @@
         </activity>
         <activity 
             android:name="com.android.worldcarquiz.activity.WorldsListActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Light.NoTitleBar">      
+            android:label="@string/app_name">      
         </activity>
         <activity 
             android:name="com.android.worldcarquiz.activity.QuestionActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Light">      
+            android:label="@string/app_name">      
         </activity>        
         <activity 
             android:name="com.android.worldcarquiz.activity.WorldPagerActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Light">      
+            android:label="@string/app_name">      
         </activity>          
     </application>
 
