Mas cambios pa que funciones

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.android.worldcarquiz.activity.MainMenuActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/android:style/Theme.Light.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
