--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,11 +30,12 @@
         <activity 
             android:name="com.android.worldcarquiz.activity.QuestionActivity"
             android:label="@string/app_name">      
-        </activity>        
+        </activity>       
         <activity 
             android:name="com.android.worldcarquiz.activity.WorldPagerActivity"
+            android:theme="@style/thin_ab"
             android:label="@string/app_name">      
-        </activity>          
+        </activity>       
     </application>
 
 </manifest>
