--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,7 @@
         </activity>       
         <activity 
             android:name="com.android.worldcarquiz.activity.WorldPagerActivity"
-            android:theme="@style/thin_ab"
+            android:theme="@style/CustomActionBarTheme"
             android:label="@string/app_name">      
         </activity>       
     </application>
