--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </activity>
         <activity 
             android:name="com.android.worldcarquiz.activity.QuestionActivity"
+            android:theme="@style/CustomActionBarTheme"
             android:label="@string/app_name">      
         </activity>       
         <activity 
