--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,13 @@
         android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.VIBRATE"/>
-
+    
+    <!-- Internet Permissions -->
+    <uses-permission android:name="android.permission.INTERNET" />
+     
+    <!-- Permission to write to external storage -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+ 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
