--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,7 +48,7 @@
         </activity>       
          <activity 
             android:name="com.android.worldcarquiz.activity.QuestionActivitySolved"
-            android:theme="@style/CustomActionBarTheme"
+            android:theme="@style/android:style/Theme.Light.NoTitleBar"
             android:label="@string/app_name">      
         </activity>       
     </application>
