--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,7 +50,12 @@
             android:name="com.android.worldcarquiz.activity.QuestionActivitySolved"
             android:theme="@style/android:style/Theme.Light.NoTitleBar"
             android:label="@string/app_name">      
-        </activity>       
+        </activity> 
+         <activity 
+            android:name="com.android.worldcarquiz.activity.GarageActivity"
+            android:theme="@style/android:style/Theme.Light.NoTitleBar"
+            android:label="@string/app_name">      
+        </activity>      
     </application>
 
 </manifest>
