--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,7 +38,7 @@
         </activity>
         <activity 
             android:name="com.android.worldcarquiz.activity.QuestionActivity"
-            android:theme="@style/CustomActionBarTheme"
+            android:theme="@style/android:style/Theme.Light.NoTitleBar"
             android:label="@string/app_name">      
         </activity>       
         <activity 
